2004-02-08  Jesper Harder  <harder@ifa.au.dk>

	* nnrss.el (nnrss-make-filename): New function.
	(nnrss-request-delete-group, nnrss-read-server-data)
	(nnrss-save-server-data, nnrss-read-group-data)
	(nnrss-save-group-data): Use it.
	(nnrss-save-server-data, nnrss-save-group-data): Use gnus-prin1.
	(nnrss-read-server-data, nnrss-read-group-data): Use load.
	(nnrss-group-hashtb): Make it a hash table rather than an obarray.

2004-02-07  Jesper Harder  <harder@ifa.au.dk>

	* mml.el (mml-compute-boundary-1): Don't uncompress files.

2004-02-06  Jesper Harder  <harder@ifa.au.dk>

	* mml.el (mml-mode, mml-x-dnd-attach-file): Attach drop and drag
	files.

	* message.el (message-generate-headers-first): Don't quote nil
	and t in docstrings.

	* imap.el (imap-id): do. 

	* gnus-agent.el (gnus-agent-consider-all-articles)
	(gnus-agent-queue-mail): do.		 

2004-02-05  Reiner Steib  <Reiner.Steib@gmx.de>

	* spam-report.el (spam-report-process-queue): New function.
	Process requests from `spam-report-requests-file'.
	(spam-report-process-queue): Doc fix.

2004-02-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-register-routine)
	(spam-log-processing-to-registry, spam-log-registered-p)
	(spam-log-unregistration-needed-p, spam-log-undo-registration):
	change "check" to "spam-check" for semi-clarity

2004-02-05  Jesper Harder  <harder@ifa.au.dk>

	* pop3.el: Require nnheader.

	* mml-smime.el: Require cl.  Autoload message-fetch-field.

	* mml-sec.el (mml-signencrypt-style): Don't depend on Gnus.

	* gnus-picon.el: Require cl.

	* gnus-fun.el: Require gnus-ems and gnus-util.

	* gnus.el (gnus-method-to-server): Move defsubst before first use.

	* gnus-diary.el (gnus-diary-header-schedule): caddr -> car (cddr

	* gnus-art.el (gnus-article-edit-mode): Define before first
	reference.

2004-02-04  Jesper Harder  <harder@ifa.au.dk>

	* gnus-uu.el (gnus-uu-check-correct-stripped-uucode): Simplify.
	(gnus-uu-post-encoded): Use point-at-bol.
